--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "jquery": "^3.6.1",
-    "parcel": "^2.7.0"
+    "parcel": "^2.7.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "events": "^3.3.0"
